# pubme

./: .gitignore  README.md
PubMe/: Env.swift
PubMe.xcodeproj/project.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate
PubMe.xcodeproj/xcuserdata/jason.xcuserdatad/xcschemes/: xcschememanagement.plist
PubMe/Components/: MessageInputView.swift  MessageView.swift
PubMe/Models/: Messages.swift
PubMe/Util/: Keychain.swift  Logger.swift  PubkeyClient.swift
PubMe/Views/: OnboardingView.swift  PubkeysView.swift
ios/PubMe/: ContentView.swift  Env.swift  PubMeApp.swift
ios/PubMe.xcodeproj/: project.pbxproj
ios/PubMe.xcodeproj/project.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate
ios/PubMe/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/PubMe/Components/: MessageInputView.swift  MessageView.swift  MyPubkyView.swift
ios/PubMe/Mobile.xcframework/ios-arm64-simulator/Headers/: pubkymobile.swift
ios/PubMe/Models/: Messages.swift
ios/PubMe/Util/: KeyboardResponder.swift  Keychain.swift  Logger.swift  PubkeyClient.swift  PubkyClientProxy.swift  ShowError.swift
ios/PubMe/ViewModels/: ViewModel.swift
ios/PubMe/Views/: ChatList.swift  ChatListView.swift  ChatView.swift  FriendsPublicKeys.swift  MyPubkyView.swift  Onboarding.swift  OnboardingView.swift  PubkeysView.swift  SettingsView.swift
proxy/: index.js  package-lock.json  package.json
proxy/src/: server.js  test.js
pubky-ffi/: Cargo.toml  build.rs  build_swift.sh
pubky-ffi/src/: lib.rs  pubky_client.udl
(+1 files in other folders)
