[package]
name = "pubky-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "pubkyclient"
 
[dependencies]
uniffi = { version = "0.26.0", features = [ "cli", "build" ] }
uniffi_macros = "0.28.0"
pkarr = { version = "2.1.1", features = ["async"] }
url = "2.5.2"
bytes = "1.6.1"
reqwest = { version = "0.12.5", features = ["cookies"], default-features = false }
thiserror = "1.0.62"
once_cell = "1.12"
pubky-common = { path = "../../pubky/pubky-common" }

[build-dependencies]
uniffi = { version = "0.26.0", features = ["build"] }
camino = "1.0"